Update vendor name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vendor/davidpckg",
+    "name": "linkskill-nl/davidpckg",
     "description": "A simple PHP package that says hello",
     "type": "library",
     "license": "",
